--- a/GdsSharp.Lib.Test/GdsSharp.Lib.Test.csproj
+++ b/GdsSharp.Lib.Test/GdsSharp.Lib.Test.csproj
@@ -4,7 +4,6 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
     </PropertyGroup>
@@ -30,6 +29,8 @@
         <EmbeddedResource Include="Assets\xor.gds2"/>
         <None Remove="Assets\nand2.gds2"/>
         <EmbeddedResource Include="Assets\nand2.gds2"/>
+        <None Remove="Assets\osu018_stdcells.gds2"/>
+        <EmbeddedResource Include="Assets\osu018_stdcells.gds2"/>
     </ItemGroup>
 
 </Project>
