--- a/GdsSharp.Lib/GdsSharp.Lib.csproj
+++ b/GdsSharp.Lib/GdsSharp.Lib.csproj
@@ -29,4 +29,8 @@
         </None>
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="SoftCircuits.OrderedDictionary" Version="3.2.0"/>
+    </ItemGroup>
+
 </Project>
