--- a/GdsSharp.Benchmarks/GdsSharp.Benchmarks.csproj
+++ b/GdsSharp.Benchmarks/GdsSharp.Benchmarks.csproj
@@ -16,4 +16,31 @@
       <PackageReference Include="BenchmarkDotNet.Annotations" Version="0.14.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="PathBuilder\Implementations\PathBuilderListReverse.cs" />
+      <Compile Remove="PathBuilder\Implementations\PathBuilderListReverseFactorExtract.cs" />
+      <Compile Remove="PathBuilder\Implementations\PathBuilderListReversePrealloc.cs" />
+      <Compile Remove="PathBuilder\Implementations\PathBuilderSpan.cs" />
+      <Compile Remove="PathBuilder\IPathBuilder.cs" />
+      <Compile Remove="PathBuilder\PathBuilderBenchmark.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="PathBuilder\Implementations\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="PathBuilder\Implementations\PathBuilderArray.cs" />
+      <Compile Remove="PathBuilder\Implementations\PathBuilderListReverse.cs" />
+      <Compile Remove="PathBuilder\Implementations\PathBuilderListReverseFactorExtract.cs" />
+      <Compile Remove="PathBuilder\Implementations\PathBuilderListReversePrealloc.cs" />
+      <Compile Remove="PathBuilder\Implementations\PathBuilderListReverseSpan.cs" />
+      <Compile Remove="PathBuilder\IPathBuilder.cs" />
+      <Compile Remove="PathBuilder\PathBuilderBase.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="PathBuilder\Implementations\" />
+    </ItemGroup>
+
 </Project>
