--- a/GdsSharp.Lib/GdsSharp.Lib.csproj
+++ b/GdsSharp.Lib/GdsSharp.Lib.csproj
@@ -11,13 +11,18 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-        <RepositoryUrl>https://github.com/BorisGerretzen/GdsSharp</RepositoryUrl>
+        <RepositoryUrl>https://github.com/BorisGerretzen/GdsSharp.git</RepositoryUrl>
         <Authors>Boris Gerretzen</Authors>
         <PackageTags>GDSII, calma, eda, photomask, lithography, ic</PackageTags>
         <RepositoryType>git</RepositoryType>
-
     </PropertyGroup>
 
+    <PropertyGroup>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+    </PropertyGroup>
+    
     <ItemGroup>
         <None Include="..\LICENSE">
             <Pack>True</Pack>
